--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <body>
         <div class="content">
             <div class="js-clock">
-                <h1>00:00</h1>
+                <span></span>
             </div>
             <form class="js-form form">
                 <input type="text" placeholder="What is your name?" >            
             </form>
-            <h4 class="js-greetings greetings"></h4>
+            <span class="js-greetings greetings"></span>
             <form class="js-toDoForm">
                 <input type="text" placeholder="Write a to do" />
             </form>
