--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
             </ul>
         </div>
-        <span class="js-weather"></span>
+        <div class="js-weather"></div>
         <script src="clock.js"></script>
         <script src="gretting.js"></script>
         <script src="todo.js"></script>  
